<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/menu_more"
        android:title=""
        android:icon="@drawable/ic_more_vert"
        app:showAsAction="always">
        <menu>
            
            <item
                android:id="@+id/menu_refresh"
                android:title="@string/menu_refresh"
                app:showAsAction="never" />

            <!-- New: Shizuku Open/Download Action (Visible in Shizuku Mode) -->
            <item
                android:id="@+id/menu_shizuku_action"
                android:title="@string/menu_open_shizuku"
                android:visible="false"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_copy_settings"
                android:title="@string/menu_copy_vpn_to_shizuku"
                app:showAsAction="never" />
            
            <!-- Import/Export -->
            <item
                android:id="@+id/menu_export"
                android:title="@string/menu_export"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_import"
                android:title="@string/menu_import"
                app:showAsAction="never" />

            <!-- Reboot Reminder -->
            <item
                android:id="@+id/menu_reboot_reminder"
                android:title="@string/menu_reboot_reminder"
                android:checkable="true"
                app:showAsAction="never" />
                
            <!-- Help  -->
            <item
                android:id="@+id/menu_help"
                android:title="@string/menu_help"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>

