<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/menu_more"
        android:title=""
        android:icon="@drawable/ic_more_vert"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_refresh"
                android:title="@string/menu_refresh"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_stop_monitoring"
                android:title="@string/menu_stop_monitoring"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_exclude_blacklisted"
                android:title="@string/menu_exclude_blacklisted"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_clear_list"
                android:title="@string/menu_clear_list"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>