<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/image_app_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/content_desc_app_icon" />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/light_grey"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/image_app_icon"
        app:layout_constraintEnd_toStartOf="@id/icon_wifi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="Application Name" />

    <ImageView
        android:id="@+id/icon_wifi"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="4dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_wifi"
        app:tint="@color/dark_blue"
        app:layout_constraintEnd_toStartOf="@id/icon_data"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/content_desc_wifi_toggle" />

    <ImageView
        android:id="@+id/icon_data"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="4dp"
        android:src="@drawable/ic_data"
        app:tint="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/content_desc_data_toggle" />

</androidx.constraintlayout.widget.ConstraintLayout>


