<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".NetworkMonitoringActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_monitoring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_monitoring"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/light_grey"
            app:title=""> 

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start"
                android:gravity="center_vertical">
                
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_mode_monitoring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_shizuku"
                    android:textColor="@color/light_grey"
                    app:thumbTint="@color/switch_thumb_tint"
                    app:trackTint="@color/switch_track_tint" />
                    
                <Button
                    android:id="@+id/button_monitoring_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/monitoring_pause"
                    android:layout_marginStart="8dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    style="@style/Widget.App.Button" />
                    
            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_monitoring"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout_monitoring"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/fastscroll_thumb"
        app:fastScrollHorizontalTrackDrawable="@drawable/fastscroll_track"
        app:fastScrollVerticalThumbDrawable="@drawable/fastscroll_thumb"
        app:fastScrollVerticalTrackDrawable="@drawable/fastscroll_track" />

    <TextView
        android:id="@+id/text_empty_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_monitoring_log"
        android:textColor="@color/icon_grey_disabled"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>